--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 
 </div>
 <button class="button">Vérifier</button>
-<script src="../js/motus.js"></script>
+<script src="motus.js"></script>
 </body>
 </html>
